[gd_scene load_steps=12 format=3 uid="uid://wqou0ibwbfku"]

[ext_resource type="Script" path="res://ui/title_screen/tilte_screen.gd" id="1_4egoi"]
[ext_resource type="Theme" uid="uid://dfureb8blyilx" path="res://ui/themes/default_theme.tres" id="1_26s2w"]
[ext_resource type="PackedScene" uid="uid://cy8otjo413bqb" path="res://ui/elements/button.tscn" id="2_e2snu"]
[ext_resource type="Texture2D" uid="uid://ll0bvgdt5gvu" path="res://entities/bullet/abilities/explosive/explosive_icon.tres" id="4_ycf6w"]
[ext_resource type="Texture2D" uid="uid://dwu8wv3f4oqdk" path="res://entities/bullet/bullet.png" id="5_vhbs1"]
[ext_resource type="Texture2D" uid="uid://8j5a0qq8t0ye" path="res://entities/enemies/ghoul_48px-Sheet-export.png" id="6_aevuw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1kvch"]
atlas = ExtResource("6_aevuw")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi8q0"]
atlas = ExtResource("6_aevuw")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5qqg"]
atlas = ExtResource("6_aevuw")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbx2y"]
atlas = ExtResource("6_aevuw")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_6uk86"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kvch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi8q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5qqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbx2y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="TilteScreen" type="Control"]
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4egoi")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Viewport" type="Control" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/Viewport"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -80.0
offset_right = 85.5
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_26s2w")
theme_override_font_sizes/font_size = 48
text = "RICOCHET"

[node name="Buttons" type="Control" parent="Margin/Viewport"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = 1.5
offset_right = 105.5
offset_bottom = 84.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" parent="Margin/Viewport/Buttons" instance=ExtResource("2_e2snu")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -6.0
offset_right = 58.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditsButton" parent="Margin/Viewport/Buttons" instance=ExtResource("2_e2snu")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = 21.0
offset_right = 58.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
text = "CREDITS"

[node name="Highscore" type="Control" parent="Margin/Viewport"]
anchors_preset = 0
offset_left = -34.0
offset_top = -14.0
offset_right = 7.0
offset_bottom = 39.0

[node name="Text" type="Label" parent="Margin/Viewport/Highscore"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 193.0
offset_top = 266.0
offset_right = 336.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.986147, 1)
theme = ExtResource("1_26s2w")
theme_override_constants/line_spacing = 12
theme_override_font_sizes/font_size = 16
text = "High Score:"
horizontal_alignment = 2

[node name="HighscoreLabel" type="Label" parent="Margin/Viewport/Highscore"]
unique_name_in_owner = true
texture_filter = 2
layout_mode = 0
offset_left = 361.0
offset_top = 287.0
offset_right = 401.0
offset_bottom = 310.0

[node name="ExplosiveIcon" type="Sprite2D" parent="."]
modulate = Color(0.74902, 1, 0.945098, 1)
texture_filter = 1
position = Vector2(456, 113)
rotation = -0.00406143
scale = Vector2(2.25, 2.25)
texture = ExtResource("4_ycf6w")

[node name="Bullet" type="Sprite2D" parent="."]
modulate = Color(0.74902, 1, 0.945098, 1)
texture_filter = 1
position = Vector2(318, 161)
rotation = 0.288488
scale = Vector2(2.3125, 2.3125)
texture = ExtResource("5_vhbs1")

[node name="EnemyAnimation" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.74902, 1, 0.945098, 1)
self_modulate = Color(0.997956, 0.995637, 0.988673, 1)
texture_filter = 1
position = Vector2(188, 82)
scale = Vector2(2.05812, 2.05812)
sprite_frames = SubResource("SpriteFrames_6uk86")
animation = &"idle"
frame = 2
frame_progress = 0.640275

[connection signal="pressed" from="Margin/Viewport/Buttons/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Margin/Viewport/Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
